# mkdocs_subaru_example

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
custom_theme/css/: hsc_queue.css
docs/: index.md  observing.md  science.md
docs/observing/: status.md
docs/science/: publications.md  seminar.md
docs/science/publications/: 2023.md
docs/science/seminar/abstract/: 20191115_belli.md  20200214_higuchi.md
